# youtube-server

./: AGENTS.md  Cargo.toml  docker-compose.yml  readme.md
migrations/: 0003_add-annotations-to-comments.sql  001_create_video_info_table.sql  002_create_comments_table.sql
src/: error.rs  main.rs
src/ai/: mod.rs  ner.rs  ner_models.rs
src/db/: connection.rs  mod.rs  models.rs  operations.rs
src/routes/: database.rs  errors.rs  health.rs  mod.rs  ner_route.rs  video.rs
