[package]
name = "youtube-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15"
prometheus = "0.14.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "migrate", "chrono", "uuid"] }
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace", "metrics", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
yt-scraper = { git = "https://github.com/ryanweiler92/rust_yt_scraper" }
wasm-bindgen = "0.2.100"
reqwest = "0.12.23"
